--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Font Awesome Icons -->
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+  integrity="sha512-KK1cQ8bB0GdKIkCVy1V1e3qRzDpb0r4dxG+1vVdxW5ivhWzj4X0YyMmgYp9OeX5rQjCby8s1VRkY6Zzz3Jv+YQ=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+/>
+
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
